Bug 1917625 [wpt PR 48050] - Add missing composite op in test 2d.layer.globalCompositeOperation, a=testonly
Automatic update from web-platform-tests
Add missing composite op in test 2d.layer.globalCompositeOperation

Bug: 40249439
Change-Id: I4227510647b9baf7471c4ccbb6116f1b6354a75a
Reviewed-on: https://chromium-review.googlesource.com/c/chromium/src/+/5836573
Reviewed-by: Andres Ricardo Perez <andresrperezchromium.org>
Commit-Queue: Jean-Philippe Gravel <jpgravelchromium.org>
Cr-Commit-Position: refs/heads/main{#1361229}

--

wpt-commits: fdd3587c9fd8eed7227b132a54d0ddd3af847fab
wpt-pr: 48050

UltraBlame original commit: 3462457af94d6fd55a85b17a41b7de46adbe340c

--- a/testing/web-platform/tests/html/canvas/element/layers/2d.layer.globalCompositeOperation-expected.html
+++ b/testing/web-platform/tests/html/canvas/element/layers/2d.layer.globalCompositeOperation-expected.html
@@ -738,7 +738,7 @@ div
 >
 source
 -
-atop
+out
 <
 /
 div
@@ -807,6 +807,300 @@ getElementById
 (
 "
 canvas2
+"
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+source
+-
+out
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+const
+canvas2
+=
+document
+.
+createElement
+(
+"
+canvas
+"
+)
+;
+const
+ctx2
+=
+canvas2
+.
+getContext
+(
+"
+2d
+"
+)
+;
+ctx2
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx2
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx2
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx2
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+imageSmoothingEnabled
+=
+false
+;
+ctx
+.
+drawImage
+(
+canvas2
+0
+0
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+source
+-
+atop
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas3
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+canvas
+=
+document
+.
+getElementById
+(
+"
+canvas3
 "
 )
 ;
@@ -1042,7 +1336,7 @@ canvas
 id
 =
 "
-canvas3
+canvas4
 "
 width
 =
@@ -1100,7 +1394,7 @@ document
 getElementById
 (
 "
-canvas3
+canvas4
 "
 )
 ;
@@ -1336,7 +1630,7 @@ canvas
 id
 =
 "
-canvas4
+canvas5
 "
 width
 =
@@ -1394,7 +1688,7 @@ document
 getElementById
 (
 "
-canvas4
+canvas5
 "
 )
 ;
@@ -1630,7 +1924,7 @@ canvas
 id
 =
 "
-canvas5
+canvas6
 "
 width
 =
@@ -1688,7 +1982,7 @@ document
 getElementById
 (
 "
-canvas5
+canvas6
 "
 )
 ;
@@ -1924,7 +2218,7 @@ canvas
 id
 =
 "
-canvas6
+canvas7
 "
 width
 =
@@ -1982,7 +2276,7 @@ document
 getElementById
 (
 "
-canvas6
+canvas7
 "
 )
 ;
@@ -2216,7 +2510,7 @@ canvas
 id
 =
 "
-canvas7
+canvas8
 "
 width
 =
@@ -2274,7 +2568,7 @@ document
 getElementById
 (
 "
-canvas7
+canvas8
 "
 )
 ;
@@ -2506,7 +2800,7 @@ canvas
 id
 =
 "
-canvas8
+canvas9
 "
 width
 =
@@ -2564,7 +2858,7 @@ document
 getElementById
 (
 "
-canvas8
+canvas9
 "
 )
 ;
@@ -2796,7 +3090,7 @@ canvas
 id
 =
 "
-canvas9
+canvas10
 "
 width
 =
@@ -2854,7 +3148,7 @@ document
 getElementById
 (
 "
-canvas9
+canvas10
 "
 )
 ;
@@ -3086,7 +3380,7 @@ canvas
 id
 =
 "
-canvas10
+canvas11
 "
 width
 =
@@ -3144,7 +3438,7 @@ document
 getElementById
 (
 "
-canvas10
+canvas11
 "
 )
 ;
@@ -3376,7 +3670,7 @@ canvas
 id
 =
 "
-canvas11
+canvas12
 "
 width
 =
@@ -3434,7 +3728,7 @@ document
 getElementById
 (
 "
-canvas11
+canvas12
 "
 )
 ;
@@ -3666,7 +3960,7 @@ canvas
 id
 =
 "
-canvas12
+canvas13
 "
 width
 =
@@ -3724,7 +4018,7 @@ document
 getElementById
 (
 "
-canvas12
+canvas13
 "
 )
 ;
@@ -3956,7 +4250,7 @@ canvas
 id
 =
 "
-canvas13
+canvas14
 "
 width
 =
@@ -4014,7 +4308,7 @@ document
 getElementById
 (
 "
-canvas13
+canvas14
 "
 )
 ;
@@ -4246,7 +4540,7 @@ canvas
 id
 =
 "
-canvas14
+canvas15
 "
 width
 =
@@ -4304,7 +4598,7 @@ document
 getElementById
 (
 "
-canvas14
+canvas15
 "
 )
 ;
@@ -4538,7 +4832,7 @@ canvas
 id
 =
 "
-canvas15
+canvas16
 "
 width
 =
@@ -4596,7 +4890,7 @@ document
 getElementById
 (
 "
-canvas15
+canvas16
 "
 )
 ;
@@ -4832,7 +5126,7 @@ canvas
 id
 =
 "
-canvas16
+canvas17
 "
 width
 =
@@ -4890,7 +5184,7 @@ document
 getElementById
 (
 "
-canvas16
+canvas17
 "
 )
 ;
@@ -5126,7 +5420,7 @@ canvas
 id
 =
 "
-canvas17
+canvas18
 "
 width
 =
@@ -5184,7 +5478,7 @@ document
 getElementById
 (
 "
-canvas17
+canvas18
 "
 )
 ;
@@ -5420,7 +5714,7 @@ canvas
 id
 =
 "
-canvas18
+canvas19
 "
 width
 =
@@ -5478,7 +5772,7 @@ document
 getElementById
 (
 "
-canvas18
+canvas19
 "
 )
 ;
@@ -5712,7 +6006,7 @@ canvas
 id
 =
 "
-canvas19
+canvas20
 "
 width
 =
@@ -5770,7 +6064,7 @@ document
 getElementById
 (
 "
-canvas19
+canvas20
 "
 )
 ;
@@ -6002,7 +6296,7 @@ canvas
 id
 =
 "
-canvas20
+canvas21
 "
 width
 =
@@ -6060,7 +6354,7 @@ document
 getElementById
 (
 "
-canvas20
+canvas21
 "
 )
 ;
@@ -6292,7 +6586,7 @@ canvas
 id
 =
 "
-canvas21
+canvas22
 "
 width
 =
@@ -6350,7 +6644,7 @@ document
 getElementById
 (
 "
-canvas21
+canvas22
 "
 )
 ;
@@ -6582,7 +6876,7 @@ canvas
 id
 =
 "
-canvas22
+canvas23
 "
 width
 =
@@ -6640,7 +6934,7 @@ document
 getElementById
 (
 "
-canvas22
+canvas23
 "
 )
 ;
@@ -6872,7 +7166,7 @@ canvas
 id
 =
 "
-canvas23
+canvas24
 "
 width
 =
@@ -6930,7 +7224,7 @@ document
 getElementById
 (
 "
-canvas23
+canvas24
 "
 )
 ;
@@ -7162,7 +7456,7 @@ canvas
 id
 =
 "
-canvas24
+canvas25
 "
 width
 =
@@ -7220,7 +7514,7 @@ document
 getElementById
 (
 "
-canvas24
+canvas25
 "
 )
 ;
