--- a/testing/web-platform/tests/html/canvas/element/layers/2d.layer.globalCompositeOperation.html
+++ b/testing/web-platform/tests/html/canvas/element/layers/2d.layer.globalCompositeOperation.html
@@ -705,7 +705,7 @@ div
 >
 source
 -
-atop
+out
 <
 /
 div
@@ -774,6 +774,273 @@ getElementById
 (
 "
 canvas2
+"
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+source
+-
+out
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+source
+-
+atop
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas3
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+canvas
+=
+document
+.
+getElementById
+(
+"
+canvas3
 "
 )
 ;
@@ -982,7 +1249,7 @@ canvas
 id
 =
 "
-canvas3
+canvas4
 "
 width
 =
@@ -1040,7 +1307,7 @@ document
 getElementById
 (
 "
-canvas3
+canvas4
 "
 )
 ;
@@ -1249,7 +1516,7 @@ canvas
 id
 =
 "
-canvas4
+canvas5
 "
 width
 =
@@ -1307,7 +1574,7 @@ document
 getElementById
 (
 "
-canvas4
+canvas5
 "
 )
 ;
@@ -1516,7 +1783,7 @@ canvas
 id
 =
 "
-canvas5
+canvas6
 "
 width
 =
@@ -1574,7 +1841,7 @@ document
 getElementById
 (
 "
-canvas5
+canvas6
 "
 )
 ;
@@ -1783,7 +2050,7 @@ canvas
 id
 =
 "
-canvas6
+canvas7
 "
 width
 =
@@ -1841,7 +2108,7 @@ document
 getElementById
 (
 "
-canvas6
+canvas7
 "
 )
 ;
@@ -2048,7 +2315,7 @@ canvas
 id
 =
 "
-canvas7
+canvas8
 "
 width
 =
@@ -2106,7 +2373,7 @@ document
 getElementById
 (
 "
-canvas7
+canvas8
 "
 )
 ;
@@ -2311,7 +2578,7 @@ canvas
 id
 =
 "
-canvas8
+canvas9
 "
 width
 =
@@ -2369,7 +2636,7 @@ document
 getElementById
 (
 "
-canvas8
+canvas9
 "
 )
 ;
@@ -2574,7 +2841,7 @@ canvas
 id
 =
 "
-canvas9
+canvas10
 "
 width
 =
@@ -2632,7 +2899,7 @@ document
 getElementById
 (
 "
-canvas9
+canvas10
 "
 )
 ;
@@ -2837,7 +3104,7 @@ canvas
 id
 =
 "
-canvas10
+canvas11
 "
 width
 =
@@ -2895,7 +3162,7 @@ document
 getElementById
 (
 "
-canvas10
+canvas11
 "
 )
 ;
@@ -3100,7 +3367,7 @@ canvas
 id
 =
 "
-canvas11
+canvas12
 "
 width
 =
@@ -3158,7 +3425,7 @@ document
 getElementById
 (
 "
-canvas11
+canvas12
 "
 )
 ;
@@ -3363,7 +3630,7 @@ canvas
 id
 =
 "
-canvas12
+canvas13
 "
 width
 =
@@ -3421,7 +3688,7 @@ document
 getElementById
 (
 "
-canvas12
+canvas13
 "
 )
 ;
@@ -3626,7 +3893,7 @@ canvas
 id
 =
 "
-canvas13
+canvas14
 "
 width
 =
@@ -3684,7 +3951,7 @@ document
 getElementById
 (
 "
-canvas13
+canvas14
 "
 )
 ;
@@ -3889,7 +4156,7 @@ canvas
 id
 =
 "
-canvas14
+canvas15
 "
 width
 =
@@ -3947,7 +4214,7 @@ document
 getElementById
 (
 "
-canvas14
+canvas15
 "
 )
 ;
@@ -4154,7 +4421,7 @@ canvas
 id
 =
 "
-canvas15
+canvas16
 "
 width
 =
@@ -4212,7 +4479,7 @@ document
 getElementById
 (
 "
-canvas15
+canvas16
 "
 )
 ;
@@ -4421,7 +4688,7 @@ canvas
 id
 =
 "
-canvas16
+canvas17
 "
 width
 =
@@ -4479,7 +4746,7 @@ document
 getElementById
 (
 "
-canvas16
+canvas17
 "
 )
 ;
@@ -4688,7 +4955,7 @@ canvas
 id
 =
 "
-canvas17
+canvas18
 "
 width
 =
@@ -4746,7 +5013,7 @@ document
 getElementById
 (
 "
-canvas17
+canvas18
 "
 )
 ;
@@ -4955,7 +5222,7 @@ canvas
 id
 =
 "
-canvas18
+canvas19
 "
 width
 =
@@ -5013,7 +5280,7 @@ document
 getElementById
 (
 "
-canvas18
+canvas19
 "
 )
 ;
@@ -5220,7 +5487,7 @@ canvas
 id
 =
 "
-canvas19
+canvas20
 "
 width
 =
@@ -5278,7 +5545,7 @@ document
 getElementById
 (
 "
-canvas19
+canvas20
 "
 )
 ;
@@ -5483,7 +5750,7 @@ canvas
 id
 =
 "
-canvas20
+canvas21
 "
 width
 =
@@ -5541,7 +5808,7 @@ document
 getElementById
 (
 "
-canvas20
+canvas21
 "
 )
 ;
@@ -5746,7 +6013,7 @@ canvas
 id
 =
 "
-canvas21
+canvas22
 "
 width
 =
@@ -5804,7 +6071,7 @@ document
 getElementById
 (
 "
-canvas21
+canvas22
 "
 )
 ;
@@ -6009,7 +6276,7 @@ canvas
 id
 =
 "
-canvas22
+canvas23
 "
 width
 =
@@ -6067,7 +6334,7 @@ document
 getElementById
 (
 "
-canvas22
+canvas23
 "
 )
 ;
@@ -6272,7 +6539,7 @@ canvas
 id
 =
 "
-canvas23
+canvas24
 "
 width
 =
@@ -6330,7 +6597,7 @@ document
 getElementById
 (
 "
-canvas23
+canvas24
 "
 )
 ;
@@ -6535,7 +6802,7 @@ canvas
 id
 =
 "
-canvas24
+canvas25
 "
 width
 =
@@ -6593,7 +6860,7 @@ document
 getElementById
 (
 "
-canvas24
+canvas25
 "
 )
 ;
