--- a/testing/web-platform/tests/html/canvas/offscreen/layers/2d.layer.globalCompositeOperation.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/layers/2d.layer.globalCompositeOperation.html
@@ -767,7 +767,7 @@ div
 >
 source
 -
-atop
+out
 <
 /
 div
@@ -778,6 +778,304 @@ id
 =
 "
 canvas2
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+canvas
+=
+new
+OffscreenCanvas
+(
+90
+90
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+source
+-
+out
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+const
+outputCanvas
+=
+document
+.
+getElementById
+(
+"
+canvas2
+"
+)
+;
+const
+outputCtx
+=
+outputCanvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+outputCtx
+.
+drawImage
+(
+canvas
+0
+0
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+source
+-
+atop
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas3
 "
 width
 =
@@ -1024,304 +1322,6 @@ document
 getElementById
 (
 "
-canvas2
-"
-)
-;
-const
-outputCtx
-=
-outputCanvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-outputCtx
-.
-drawImage
-(
-canvas
-0
-0
-)
-;
-<
-/
-script
->
-<
-/
-span
->
-<
-span
->
-<
-div
->
-destination
--
-over
-<
-/
-div
->
-<
-canvas
-id
-=
-"
-canvas3
-"
-width
-=
-"
-90
-"
-height
-=
-"
-90
-"
-style
-=
-"
-outline
-:
-1px
-solid
-"
->
-<
-p
-class
-=
-"
-fallback
-"
->
-FAIL
-(
-fallback
-content
-)
-<
-/
-p
->
-<
-/
-canvas
->
-<
-script
-type
-=
-"
-module
-"
->
-const
-canvas
-=
-new
-OffscreenCanvas
-(
-90
-90
-)
-;
-const
-ctx
-=
-canvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-ctx
-.
-translate
-(
-50
-50
-)
-;
-ctx
-.
-scale
-(
-2
-2
-)
-;
-ctx
-.
-rotate
-(
-Math
-.
-PI
-)
-;
-ctx
-.
-translate
-(
--
-25
--
-25
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-0
-255
-0
-.
-8
-)
-'
-;
-ctx
-.
-fillRect
-(
-15
-15
-25
-25
-)
-;
-ctx
-.
-globalAlpha
-=
-0
-.
-75
-;
-ctx
-.
-globalCompositeOperation
-=
-'
-destination
--
-over
-'
-;
-ctx
-.
-shadowOffsetX
-=
-7
-;
-ctx
-.
-shadowOffsetY
-=
-7
-;
-ctx
-.
-shadowColor
-=
-'
-rgba
-(
-255
-165
-0
-0
-.
-5
-)
-'
-;
-ctx
-.
-beginLayer
-(
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-204
-0
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-10
-25
-25
-20
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-204
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-25
-10
-20
-25
-)
-;
-ctx
-.
-endLayer
-(
-)
-;
-const
-outputCanvas
-=
-document
-.
-getElementById
-(
-"
 canvas3
 "
 )
@@ -1363,7 +1363,7 @@ div
 >
 destination
 -
-in
+over
 <
 /
 div
@@ -1521,7 +1521,7 @@ globalCompositeOperation
 '
 destination
 -
-in
+over
 '
 ;
 ctx
@@ -1661,7 +1661,7 @@ div
 >
 destination
 -
-out
+in
 <
 /
 div
@@ -1819,7 +1819,7 @@ globalCompositeOperation
 '
 destination
 -
-out
+in
 '
 ;
 ctx
@@ -1959,7 +1959,7 @@ div
 >
 destination
 -
-atop
+out
 <
 /
 div
@@ -1970,6 +1970,304 @@ id
 =
 "
 canvas6
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+canvas
+=
+new
+OffscreenCanvas
+(
+90
+90
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+destination
+-
+out
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+const
+outputCanvas
+=
+document
+.
+getElementById
+(
+"
+canvas6
+"
+)
+;
+const
+outputCtx
+=
+outputCanvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+outputCtx
+.
+drawImage
+(
+canvas
+0
+0
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+destination
+-
+atop
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas7
 "
 width
 =
@@ -2216,300 +2514,6 @@ document
 getElementById
 (
 "
-canvas6
-"
-)
-;
-const
-outputCtx
-=
-outputCanvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-outputCtx
-.
-drawImage
-(
-canvas
-0
-0
-)
-;
-<
-/
-script
->
-<
-/
-span
->
-<
-span
->
-<
-div
->
-lighter
-<
-/
-div
->
-<
-canvas
-id
-=
-"
-canvas7
-"
-width
-=
-"
-90
-"
-height
-=
-"
-90
-"
-style
-=
-"
-outline
-:
-1px
-solid
-"
->
-<
-p
-class
-=
-"
-fallback
-"
->
-FAIL
-(
-fallback
-content
-)
-<
-/
-p
->
-<
-/
-canvas
->
-<
-script
-type
-=
-"
-module
-"
->
-const
-canvas
-=
-new
-OffscreenCanvas
-(
-90
-90
-)
-;
-const
-ctx
-=
-canvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-ctx
-.
-translate
-(
-50
-50
-)
-;
-ctx
-.
-scale
-(
-2
-2
-)
-;
-ctx
-.
-rotate
-(
-Math
-.
-PI
-)
-;
-ctx
-.
-translate
-(
--
-25
--
-25
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-0
-255
-0
-.
-8
-)
-'
-;
-ctx
-.
-fillRect
-(
-15
-15
-25
-25
-)
-;
-ctx
-.
-globalAlpha
-=
-0
-.
-75
-;
-ctx
-.
-globalCompositeOperation
-=
-'
-lighter
-'
-;
-ctx
-.
-shadowOffsetX
-=
-7
-;
-ctx
-.
-shadowOffsetY
-=
-7
-;
-ctx
-.
-shadowColor
-=
-'
-rgba
-(
-255
-165
-0
-0
-.
-5
-)
-'
-;
-ctx
-.
-beginLayer
-(
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-204
-0
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-10
-25
-25
-20
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-204
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-25
-10
-20
-25
-)
-;
-ctx
-.
-endLayer
-(
-)
-;
-const
-outputCanvas
-=
-document
-.
-getElementById
-(
-"
 canvas7
 "
 )
@@ -2549,7 +2553,7 @@ span
 <
 div
 >
-copy
+lighter
 <
 /
 div
@@ -2705,7 +2709,7 @@ ctx
 globalCompositeOperation
 =
 '
-copy
+lighter
 '
 ;
 ctx
@@ -2843,7 +2847,7 @@ span
 <
 div
 >
-xor
+copy
 <
 /
 div
@@ -2999,7 +3003,7 @@ ctx
 globalCompositeOperation
 =
 '
-xor
+copy
 '
 ;
 ctx
@@ -3137,7 +3141,7 @@ span
 <
 div
 >
-multiply
+xor
 <
 /
 div
@@ -3293,7 +3297,7 @@ ctx
 globalCompositeOperation
 =
 '
-multiply
+xor
 '
 ;
 ctx
@@ -3431,7 +3435,7 @@ span
 <
 div
 >
-screen
+multiply
 <
 /
 div
@@ -3587,7 +3591,7 @@ ctx
 globalCompositeOperation
 =
 '
-screen
+multiply
 '
 ;
 ctx
@@ -3725,7 +3729,7 @@ span
 <
 div
 >
-overlay
+screen
 <
 /
 div
@@ -3881,7 +3885,7 @@ ctx
 globalCompositeOperation
 =
 '
-overlay
+screen
 '
 ;
 ctx
@@ -4019,7 +4023,7 @@ span
 <
 div
 >
-darken
+overlay
 <
 /
 div
@@ -4175,7 +4179,7 @@ ctx
 globalCompositeOperation
 =
 '
-darken
+overlay
 '
 ;
 ctx
@@ -4313,7 +4317,7 @@ span
 <
 div
 >
-lighten
+darken
 <
 /
 div
@@ -4324,6 +4328,300 @@ id
 =
 "
 canvas14
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+canvas
+=
+new
+OffscreenCanvas
+(
+90
+90
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+darken
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+const
+outputCanvas
+=
+document
+.
+getElementById
+(
+"
+canvas14
+"
+)
+;
+const
+outputCtx
+=
+outputCanvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+outputCtx
+.
+drawImage
+(
+canvas
+0
+0
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+lighten
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas15
 "
 width
 =
@@ -4568,304 +4866,6 @@ document
 getElementById
 (
 "
-canvas14
-"
-)
-;
-const
-outputCtx
-=
-outputCanvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-outputCtx
-.
-drawImage
-(
-canvas
-0
-0
-)
-;
-<
-/
-script
->
-<
-/
-span
->
-<
-span
->
-<
-div
->
-color
--
-dodge
-<
-/
-div
->
-<
-canvas
-id
-=
-"
-canvas15
-"
-width
-=
-"
-90
-"
-height
-=
-"
-90
-"
-style
-=
-"
-outline
-:
-1px
-solid
-"
->
-<
-p
-class
-=
-"
-fallback
-"
->
-FAIL
-(
-fallback
-content
-)
-<
-/
-p
->
-<
-/
-canvas
->
-<
-script
-type
-=
-"
-module
-"
->
-const
-canvas
-=
-new
-OffscreenCanvas
-(
-90
-90
-)
-;
-const
-ctx
-=
-canvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-ctx
-.
-translate
-(
-50
-50
-)
-;
-ctx
-.
-scale
-(
-2
-2
-)
-;
-ctx
-.
-rotate
-(
-Math
-.
-PI
-)
-;
-ctx
-.
-translate
-(
--
-25
--
-25
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-0
-255
-0
-.
-8
-)
-'
-;
-ctx
-.
-fillRect
-(
-15
-15
-25
-25
-)
-;
-ctx
-.
-globalAlpha
-=
-0
-.
-75
-;
-ctx
-.
-globalCompositeOperation
-=
-'
-color
--
-dodge
-'
-;
-ctx
-.
-shadowOffsetX
-=
-7
-;
-ctx
-.
-shadowOffsetY
-=
-7
-;
-ctx
-.
-shadowColor
-=
-'
-rgba
-(
-255
-165
-0
-0
-.
-5
-)
-'
-;
-ctx
-.
-beginLayer
-(
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-204
-0
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-10
-25
-25
-20
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-204
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-25
-10
-20
-25
-)
-;
-ctx
-.
-endLayer
-(
-)
-;
-const
-outputCanvas
-=
-document
-.
-getElementById
-(
-"
 canvas15
 "
 )
@@ -4907,7 +4907,7 @@ div
 >
 color
 -
-burn
+dodge
 <
 /
 div
@@ -5065,7 +5065,7 @@ globalCompositeOperation
 '
 color
 -
-burn
+dodge
 '
 ;
 ctx
@@ -5203,9 +5203,9 @@ span
 <
 div
 >
-hard
+color
 -
-light
+burn
 <
 /
 div
@@ -5361,9 +5361,9 @@ ctx
 globalCompositeOperation
 =
 '
-hard
+color
 -
-light
+burn
 '
 ;
 ctx
@@ -5501,7 +5501,7 @@ span
 <
 div
 >
-soft
+hard
 -
 light
 <
@@ -5659,7 +5659,7 @@ ctx
 globalCompositeOperation
 =
 '
-soft
+hard
 -
 light
 '
@@ -5799,7 +5799,9 @@ span
 <
 div
 >
-difference
+soft
+-
+light
 <
 /
 div
@@ -5955,7 +5957,9 @@ ctx
 globalCompositeOperation
 =
 '
-difference
+soft
+-
+light
 '
 ;
 ctx
@@ -6093,7 +6097,7 @@ span
 <
 div
 >
-exclusion
+difference
 <
 /
 div
@@ -6249,7 +6253,7 @@ ctx
 globalCompositeOperation
 =
 '
-exclusion
+difference
 '
 ;
 ctx
@@ -6387,7 +6391,7 @@ span
 <
 div
 >
-hue
+exclusion
 <
 /
 div
@@ -6543,7 +6547,7 @@ ctx
 globalCompositeOperation
 =
 '
-hue
+exclusion
 '
 ;
 ctx
@@ -6681,7 +6685,7 @@ span
 <
 div
 >
-saturation
+hue
 <
 /
 div
@@ -6837,7 +6841,7 @@ ctx
 globalCompositeOperation
 =
 '
-saturation
+hue
 '
 ;
 ctx
@@ -6975,7 +6979,7 @@ span
 <
 div
 >
-color
+saturation
 <
 /
 div
@@ -7131,7 +7135,7 @@ ctx
 globalCompositeOperation
 =
 '
-color
+saturation
 '
 ;
 ctx
@@ -7269,7 +7273,7 @@ span
 <
 div
 >
-luminosity
+color
 <
 /
 div
@@ -7280,6 +7284,300 @@ id
 =
 "
 canvas24
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+canvas
+=
+new
+OffscreenCanvas
+(
+90
+90
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+color
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+const
+outputCanvas
+=
+document
+.
+getElementById
+(
+"
+canvas24
+"
+)
+;
+const
+outputCtx
+=
+outputCanvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+outputCtx
+.
+drawImage
+(
+canvas
+0
+0
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+luminosity
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas25
 "
 width
 =
@@ -7524,7 +7822,7 @@ document
 getElementById
 (
 "
-canvas24
+canvas25
 "
 )
 ;
