--- a/testing/web-platform/tests/html/canvas/offscreen/layers/2d.layer.globalCompositeOperation.w.html
+++ b/testing/web-platform/tests/html/canvas/offscreen/layers/2d.layer.globalCompositeOperation.w.html
@@ -135,7 +135,7 @@ script
 >
 pending_tests
 =
-25
+26
 ;
 <
 /
@@ -1048,7 +1048,7 @@ div
 >
 source
 -
-atop
+out
 <
 /
 div
@@ -1106,6 +1106,434 @@ id
 =
 "
 myWorker2
+"
+type
+=
+"
+text
+/
+worker
+"
+>
+self
+.
+onmessage
+=
+function
+(
+e
+)
+{
+const
+canvas
+=
+new
+OffscreenCanvas
+(
+90
+90
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+source
+-
+out
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+const
+bitmap
+=
+canvas
+.
+transferToImageBitmap
+(
+)
+;
+self
+.
+postMessage
+(
+bitmap
+bitmap
+)
+;
+}
+;
+<
+/
+script
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+blob
+=
+new
+Blob
+(
+[
+document
+.
+getElementById
+(
+'
+myWorker2
+'
+)
+.
+textContent
+]
+)
+;
+const
+worker
+=
+new
+Worker
+(
+URL
+.
+createObjectURL
+(
+blob
+)
+)
+;
+worker
+.
+addEventListener
+(
+'
+message
+'
+msg
+=
+>
+{
+const
+outputCanvas
+=
+document
+.
+getElementById
+(
+'
+canvas2
+'
+)
+;
+const
+outputCtx
+=
+outputCanvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+outputCtx
+.
+drawImage
+(
+msg
+.
+data
+0
+0
+)
+;
+if
+(
+-
+-
+pending_tests
+=
+=
+0
+)
+{
+document
+.
+documentElement
+.
+classList
+.
+remove
+(
+'
+reftest
+-
+wait
+'
+)
+;
+}
+}
+)
+;
+worker
+.
+postMessage
+(
+null
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+source
+-
+atop
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas3
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+id
+=
+"
+myWorker3
 "
 type
 =
@@ -1356,434 +1784,6 @@ document
 getElementById
 (
 '
-myWorker2
-'
-)
-.
-textContent
-]
-)
-;
-const
-worker
-=
-new
-Worker
-(
-URL
-.
-createObjectURL
-(
-blob
-)
-)
-;
-worker
-.
-addEventListener
-(
-'
-message
-'
-msg
-=
->
-{
-const
-outputCanvas
-=
-document
-.
-getElementById
-(
-'
-canvas2
-'
-)
-;
-const
-outputCtx
-=
-outputCanvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-outputCtx
-.
-drawImage
-(
-msg
-.
-data
-0
-0
-)
-;
-if
-(
--
--
-pending_tests
-=
-=
-0
-)
-{
-document
-.
-documentElement
-.
-classList
-.
-remove
-(
-'
-reftest
--
-wait
-'
-)
-;
-}
-}
-)
-;
-worker
-.
-postMessage
-(
-null
-)
-;
-<
-/
-script
->
-<
-/
-span
->
-<
-span
->
-<
-div
->
-destination
--
-over
-<
-/
-div
->
-<
-canvas
-id
-=
-"
-canvas3
-"
-width
-=
-"
-90
-"
-height
-=
-"
-90
-"
-style
-=
-"
-outline
-:
-1px
-solid
-"
->
-<
-p
-class
-=
-"
-fallback
-"
->
-FAIL
-(
-fallback
-content
-)
-<
-/
-p
->
-<
-/
-canvas
->
-<
-script
-id
-=
-"
-myWorker3
-"
-type
-=
-"
-text
-/
-worker
-"
->
-self
-.
-onmessage
-=
-function
-(
-e
-)
-{
-const
-canvas
-=
-new
-OffscreenCanvas
-(
-90
-90
-)
-;
-const
-ctx
-=
-canvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-ctx
-.
-translate
-(
-50
-50
-)
-;
-ctx
-.
-scale
-(
-2
-2
-)
-;
-ctx
-.
-rotate
-(
-Math
-.
-PI
-)
-;
-ctx
-.
-translate
-(
--
-25
--
-25
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-0
-255
-0
-.
-8
-)
-'
-;
-ctx
-.
-fillRect
-(
-15
-15
-25
-25
-)
-;
-ctx
-.
-globalAlpha
-=
-0
-.
-75
-;
-ctx
-.
-globalCompositeOperation
-=
-'
-destination
--
-over
-'
-;
-ctx
-.
-shadowOffsetX
-=
-7
-;
-ctx
-.
-shadowOffsetY
-=
-7
-;
-ctx
-.
-shadowColor
-=
-'
-rgba
-(
-255
-165
-0
-0
-.
-5
-)
-'
-;
-ctx
-.
-beginLayer
-(
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-204
-0
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-10
-25
-25
-20
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-204
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-25
-10
-20
-25
-)
-;
-ctx
-.
-endLayer
-(
-)
-;
-const
-bitmap
-=
-canvas
-.
-transferToImageBitmap
-(
-)
-;
-self
-.
-postMessage
-(
-bitmap
-bitmap
-)
-;
-}
-;
-<
-/
-script
->
-<
-script
-type
-=
-"
-module
-"
->
-const
-blob
-=
-new
-Blob
-(
-[
-document
-.
-getElementById
-(
-'
 myWorker3
 '
 )
@@ -1904,7 +1904,7 @@ div
 >
 destination
 -
-in
+over
 <
 /
 div
@@ -2078,7 +2078,7 @@ globalCompositeOperation
 '
 destination
 -
-in
+over
 '
 ;
 ctx
@@ -2332,7 +2332,7 @@ div
 >
 destination
 -
-out
+in
 <
 /
 div
@@ -2506,7 +2506,7 @@ globalCompositeOperation
 '
 destination
 -
-out
+in
 '
 ;
 ctx
@@ -2760,7 +2760,7 @@ div
 >
 destination
 -
-atop
+out
 <
 /
 div
@@ -2818,6 +2818,434 @@ id
 =
 "
 myWorker6
+"
+type
+=
+"
+text
+/
+worker
+"
+>
+self
+.
+onmessage
+=
+function
+(
+e
+)
+{
+const
+canvas
+=
+new
+OffscreenCanvas
+(
+90
+90
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+destination
+-
+out
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+const
+bitmap
+=
+canvas
+.
+transferToImageBitmap
+(
+)
+;
+self
+.
+postMessage
+(
+bitmap
+bitmap
+)
+;
+}
+;
+<
+/
+script
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+blob
+=
+new
+Blob
+(
+[
+document
+.
+getElementById
+(
+'
+myWorker6
+'
+)
+.
+textContent
+]
+)
+;
+const
+worker
+=
+new
+Worker
+(
+URL
+.
+createObjectURL
+(
+blob
+)
+)
+;
+worker
+.
+addEventListener
+(
+'
+message
+'
+msg
+=
+>
+{
+const
+outputCanvas
+=
+document
+.
+getElementById
+(
+'
+canvas6
+'
+)
+;
+const
+outputCtx
+=
+outputCanvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+outputCtx
+.
+drawImage
+(
+msg
+.
+data
+0
+0
+)
+;
+if
+(
+-
+-
+pending_tests
+=
+=
+0
+)
+{
+document
+.
+documentElement
+.
+classList
+.
+remove
+(
+'
+reftest
+-
+wait
+'
+)
+;
+}
+}
+)
+;
+worker
+.
+postMessage
+(
+null
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+destination
+-
+atop
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas7
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+id
+=
+"
+myWorker7
 "
 type
 =
@@ -3068,430 +3496,6 @@ document
 getElementById
 (
 '
-myWorker6
-'
-)
-.
-textContent
-]
-)
-;
-const
-worker
-=
-new
-Worker
-(
-URL
-.
-createObjectURL
-(
-blob
-)
-)
-;
-worker
-.
-addEventListener
-(
-'
-message
-'
-msg
-=
->
-{
-const
-outputCanvas
-=
-document
-.
-getElementById
-(
-'
-canvas6
-'
-)
-;
-const
-outputCtx
-=
-outputCanvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-outputCtx
-.
-drawImage
-(
-msg
-.
-data
-0
-0
-)
-;
-if
-(
--
--
-pending_tests
-=
-=
-0
-)
-{
-document
-.
-documentElement
-.
-classList
-.
-remove
-(
-'
-reftest
--
-wait
-'
-)
-;
-}
-}
-)
-;
-worker
-.
-postMessage
-(
-null
-)
-;
-<
-/
-script
->
-<
-/
-span
->
-<
-span
->
-<
-div
->
-lighter
-<
-/
-div
->
-<
-canvas
-id
-=
-"
-canvas7
-"
-width
-=
-"
-90
-"
-height
-=
-"
-90
-"
-style
-=
-"
-outline
-:
-1px
-solid
-"
->
-<
-p
-class
-=
-"
-fallback
-"
->
-FAIL
-(
-fallback
-content
-)
-<
-/
-p
->
-<
-/
-canvas
->
-<
-script
-id
-=
-"
-myWorker7
-"
-type
-=
-"
-text
-/
-worker
-"
->
-self
-.
-onmessage
-=
-function
-(
-e
-)
-{
-const
-canvas
-=
-new
-OffscreenCanvas
-(
-90
-90
-)
-;
-const
-ctx
-=
-canvas
-.
-getContext
-(
-'
-2d
-'
-)
-;
-ctx
-.
-translate
-(
-50
-50
-)
-;
-ctx
-.
-scale
-(
-2
-2
-)
-;
-ctx
-.
-rotate
-(
-Math
-.
-PI
-)
-;
-ctx
-.
-translate
-(
--
-25
--
-25
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-0
-255
-0
-.
-8
-)
-'
-;
-ctx
-.
-fillRect
-(
-15
-15
-25
-25
-)
-;
-ctx
-.
-globalAlpha
-=
-0
-.
-75
-;
-ctx
-.
-globalCompositeOperation
-=
-'
-lighter
-'
-;
-ctx
-.
-shadowOffsetX
-=
-7
-;
-ctx
-.
-shadowOffsetY
-=
-7
-;
-ctx
-.
-shadowColor
-=
-'
-rgba
-(
-255
-165
-0
-0
-.
-5
-)
-'
-;
-ctx
-.
-beginLayer
-(
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-204
-0
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-10
-25
-25
-20
-)
-;
-ctx
-.
-fillStyle
-=
-'
-rgba
-(
-0
-204
-0
-1
-)
-'
-;
-ctx
-.
-fillRect
-(
-25
-10
-20
-25
-)
-;
-ctx
-.
-endLayer
-(
-)
-;
-const
-bitmap
-=
-canvas
-.
-transferToImageBitmap
-(
-)
-;
-self
-.
-postMessage
-(
-bitmap
-bitmap
-)
-;
-}
-;
-<
-/
-script
->
-<
-script
-type
-=
-"
-module
-"
->
-const
-blob
-=
-new
-Blob
-(
-[
-document
-.
-getElementById
-(
-'
 myWorker7
 '
 )
@@ -3610,7 +3614,7 @@ span
 <
 div
 >
-copy
+lighter
 <
 /
 div
@@ -3782,7 +3786,7 @@ ctx
 globalCompositeOperation
 =
 '
-copy
+lighter
 '
 ;
 ctx
@@ -4034,7 +4038,7 @@ span
 <
 div
 >
-xor
+copy
 <
 /
 div
@@ -4206,7 +4210,7 @@ ctx
 globalCompositeOperation
 =
 '
-xor
+copy
 '
 ;
 ctx
@@ -4458,7 +4462,7 @@ span
 <
 div
 >
-multiply
+xor
 <
 /
 div
@@ -4630,7 +4634,7 @@ ctx
 globalCompositeOperation
 =
 '
-multiply
+xor
 '
 ;
 ctx
@@ -4882,7 +4886,7 @@ span
 <
 div
 >
-screen
+multiply
 <
 /
 div
@@ -5054,7 +5058,7 @@ ctx
 globalCompositeOperation
 =
 '
-screen
+multiply
 '
 ;
 ctx
@@ -5306,7 +5310,7 @@ span
 <
 div
 >
-overlay
+screen
 <
 /
 div
@@ -5478,7 +5482,7 @@ ctx
 globalCompositeOperation
 =
 '
-overlay
+screen
 '
 ;
 ctx
@@ -5730,7 +5734,7 @@ span
 <
 div
 >
-darken
+overlay
 <
 /
 div
@@ -5902,7 +5906,7 @@ ctx
 globalCompositeOperation
 =
 '
-darken
+overlay
 '
 ;
 ctx
@@ -6154,7 +6158,7 @@ span
 <
 div
 >
-lighten
+darken
 <
 /
 div
@@ -6326,7 +6330,7 @@ ctx
 globalCompositeOperation
 =
 '
-lighten
+darken
 '
 ;
 ctx
@@ -6578,9 +6582,7 @@ span
 <
 div
 >
-color
--
-dodge
+lighten
 <
 /
 div
@@ -6752,9 +6754,7 @@ ctx
 globalCompositeOperation
 =
 '
-color
--
-dodge
+lighten
 '
 ;
 ctx
@@ -7008,7 +7008,7 @@ div
 >
 color
 -
-burn
+dodge
 <
 /
 div
@@ -7182,7 +7182,7 @@ globalCompositeOperation
 '
 color
 -
-burn
+dodge
 '
 ;
 ctx
@@ -7434,9 +7434,9 @@ span
 <
 div
 >
-hard
+color
 -
-light
+burn
 <
 /
 div
@@ -7608,9 +7608,9 @@ ctx
 globalCompositeOperation
 =
 '
-hard
+color
 -
-light
+burn
 '
 ;
 ctx
@@ -7862,7 +7862,7 @@ span
 <
 div
 >
-soft
+hard
 -
 light
 <
@@ -8036,7 +8036,7 @@ ctx
 globalCompositeOperation
 =
 '
-soft
+hard
 -
 light
 '
@@ -8290,7 +8290,9 @@ span
 <
 div
 >
-difference
+soft
+-
+light
 <
 /
 div
@@ -8462,7 +8464,9 @@ ctx
 globalCompositeOperation
 =
 '
-difference
+soft
+-
+light
 '
 ;
 ctx
@@ -8714,7 +8718,7 @@ span
 <
 div
 >
-exclusion
+difference
 <
 /
 div
@@ -8886,7 +8890,7 @@ ctx
 globalCompositeOperation
 =
 '
-exclusion
+difference
 '
 ;
 ctx
@@ -9138,7 +9142,7 @@ span
 <
 div
 >
-hue
+exclusion
 <
 /
 div
@@ -9310,7 +9314,7 @@ ctx
 globalCompositeOperation
 =
 '
-hue
+exclusion
 '
 ;
 ctx
@@ -9562,7 +9566,7 @@ span
 <
 div
 >
-saturation
+hue
 <
 /
 div
@@ -9734,7 +9738,7 @@ ctx
 globalCompositeOperation
 =
 '
-saturation
+hue
 '
 ;
 ctx
@@ -9986,7 +9990,7 @@ span
 <
 div
 >
-color
+saturation
 <
 /
 div
@@ -10158,7 +10162,7 @@ ctx
 globalCompositeOperation
 =
 '
-color
+saturation
 '
 ;
 ctx
@@ -10410,7 +10414,7 @@ span
 <
 div
 >
-luminosity
+color
 <
 /
 div
@@ -10468,6 +10472,430 @@ id
 =
 "
 myWorker24
+"
+type
+=
+"
+text
+/
+worker
+"
+>
+self
+.
+onmessage
+=
+function
+(
+e
+)
+{
+const
+canvas
+=
+new
+OffscreenCanvas
+(
+90
+90
+)
+;
+const
+ctx
+=
+canvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+ctx
+.
+translate
+(
+50
+50
+)
+;
+ctx
+.
+scale
+(
+2
+2
+)
+;
+ctx
+.
+rotate
+(
+Math
+.
+PI
+)
+;
+ctx
+.
+translate
+(
+-
+25
+-
+25
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+0
+255
+0
+.
+8
+)
+'
+;
+ctx
+.
+fillRect
+(
+15
+15
+25
+25
+)
+;
+ctx
+.
+globalAlpha
+=
+0
+.
+75
+;
+ctx
+.
+globalCompositeOperation
+=
+'
+color
+'
+;
+ctx
+.
+shadowOffsetX
+=
+7
+;
+ctx
+.
+shadowOffsetY
+=
+7
+;
+ctx
+.
+shadowColor
+=
+'
+rgba
+(
+255
+165
+0
+0
+.
+5
+)
+'
+;
+ctx
+.
+beginLayer
+(
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+204
+0
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+10
+25
+25
+20
+)
+;
+ctx
+.
+fillStyle
+=
+'
+rgba
+(
+0
+204
+0
+1
+)
+'
+;
+ctx
+.
+fillRect
+(
+25
+10
+20
+25
+)
+;
+ctx
+.
+endLayer
+(
+)
+;
+const
+bitmap
+=
+canvas
+.
+transferToImageBitmap
+(
+)
+;
+self
+.
+postMessage
+(
+bitmap
+bitmap
+)
+;
+}
+;
+<
+/
+script
+>
+<
+script
+type
+=
+"
+module
+"
+>
+const
+blob
+=
+new
+Blob
+(
+[
+document
+.
+getElementById
+(
+'
+myWorker24
+'
+)
+.
+textContent
+]
+)
+;
+const
+worker
+=
+new
+Worker
+(
+URL
+.
+createObjectURL
+(
+blob
+)
+)
+;
+worker
+.
+addEventListener
+(
+'
+message
+'
+msg
+=
+>
+{
+const
+outputCanvas
+=
+document
+.
+getElementById
+(
+'
+canvas24
+'
+)
+;
+const
+outputCtx
+=
+outputCanvas
+.
+getContext
+(
+'
+2d
+'
+)
+;
+outputCtx
+.
+drawImage
+(
+msg
+.
+data
+0
+0
+)
+;
+if
+(
+-
+-
+pending_tests
+=
+=
+0
+)
+{
+document
+.
+documentElement
+.
+classList
+.
+remove
+(
+'
+reftest
+-
+wait
+'
+)
+;
+}
+}
+)
+;
+worker
+.
+postMessage
+(
+null
+)
+;
+<
+/
+script
+>
+<
+/
+span
+>
+<
+span
+>
+<
+div
+>
+luminosity
+<
+/
+div
+>
+<
+canvas
+id
+=
+"
+canvas25
+"
+width
+=
+"
+90
+"
+height
+=
+"
+90
+"
+style
+=
+"
+outline
+:
+1px
+solid
+"
+>
+<
+p
+class
+=
+"
+fallback
+"
+>
+FAIL
+(
+fallback
+content
+)
+<
+/
+p
+>
+<
+/
+canvas
+>
+<
+script
+id
+=
+"
+myWorker25
 "
 type
 =
@@ -10716,7 +11144,7 @@ document
 getElementById
 (
 '
-myWorker24
+myWorker25
 '
 )
 .
@@ -10757,7 +11185,7 @@ document
 getElementById
 (
 '
-canvas24
+canvas25
 '
 )
 ;
